# ezytutors

./: .gitignore  Cargo.toml
tutor-db/: .env  Cargo.toml
tutor-db/src/: database.sql
tutor-db/src/iter2/: handlers.rs  routes.rs
tutor-db/src/iter3/: db_access.rs  handlers.rs
tutor-db/src/iter4/: errors.rs
tutor-db/src/iter5/: db_access.rs  errors.rs  handlers.rs  routes.rs
tutor-db/src/iter5/dbaccess/: course.rs  tutor.rs
tutor-db/src/iter5/dbscripts/: course-course.sql  course.sql
tutor-db/src/iter5/handlers/: course.rs  general.rs  tutor.rs
tutor-db/src/iter5/models/: course.rs
tutor-nodb/: Cargo.toml
tutor-nodb/src/: handlers.rs  routes.rs
tutor-web-app-ssr/: Cargo.toml
tutor-web-app-ssr/src/: dbaccess.rs  errors.rs  handlers.rs  main.rs  mod.rs  models.rs  routes.rs
tutor-web-app-ssr/src/dbscripts/: user.sql
tutor-web-app-ssr/src/handlers/: auth.rs  course.rs  general.rs  mod.rs
tutor-web-app-ssr/static/: background.jpg:Zone.Identifier  styles.css  tutor-styles.css
tutor-web-app-ssr/static/templates/: form.html  index.html  list.html  register.html  signin.html  user.html
tutor-web-service/: Cargo.toml
tutor-web-service/src/: main.rs
tutor-web-service/src/app/: routes.rs  state.rs
tutor-web-service/src/app/dbaccess/: course.rs  tutor.rs
tutor-web-service/src/app/dbscripts/: course-course.sql
tutor-web-service/src/app/handlers/: course.rs  general.rs
tutor-web-service/src/app/models/: course.rs  tutor.rs
