[package]
name = "tutor-web-app-ssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
actix-files = "0.5.0"
awc = "2.0.3"
dotenv = "0.15.0"
rust-argon2 = "1.0.0"
tera = "1.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
sqlx = {version = "0.4.2", default_features = false, features = ["postgres", "runtime-actix-native-tls", "macros", "chrono"]}

[dev-dependencies]
actix-rt = "2.2.0"