[package]
name = "tutor-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^3.3"
actix-rt = "2.6.0"
dotenv = "0.15.0"
sqlx = {version = "0.4.2", default_features = false, features = ["postgres", "runtime-actix-native-tls", "macros", "chrono"]}
serde = {version = "1.0.110", features = ["derive"]}
chrono = {version = "0.4.11", features = ["serde"]}
openssl = {version = "0.10", features = ["vendored"]}
